--- a/pics.html
+++ b/pics.html
@@ -15,32 +15,31 @@
 
     <div id="main">
 <h1>NAVAJO IS THE BEST</h1>
-        <table border="1px">
+        <table>
             <tbody>
                 <tr>
                     <td><img id="img1" src="http://navajochapters.org/uploads/images/nn-color%20seal.gif"></td>
                     <td><img id="img2" src="http://navajochapters.org/uploads/images/nn-color%20seal.gif"></td>
-                    <td><img src="http://navajochapters.org/uploads/images/nn-color%20seal.gif"></td>
+                    <td><img id="img3" src="http://navajochapters.org/uploads/images/nn-color%20seal.gif"></td>
                 </tr>
             </tbody>
         </table>
 
-        <table border="1px">
+        <table>
             <tbody>
                 <tr>
-                    <td><img src="http://navajochapters.org/uploads/images/nn-color%20seal.gif"></td>
-                    <td><img src="http://navajochapters.org/uploads/images/nn-color%20seal.gif"></td>
-                    <td><img src="http://navajochapters.org/uploads/images/nn-color%20seal.gif"></td>
+                    <td><img id="img4" src="http://navajochapters.org/uploads/images/nn-color%20seal.gif"></td>
+                    <td><img id="img5" src="http://navajochapters.org/uploads/images/nn-color%20seal.gif"></td>
+                    <td><img id="img6" src="http://navajochapters.org/uploads/images/nn-color%20seal.gif"></td>
                 </tr>
             </tbody>
         </table>
-
-        <table border="1px">
+        <table>
             <tbody>
                 <tr>
-                    <td><img src="http://navajochapters.org/uploads/images/nn-color%20seal.gif"></td>
-                    <td><img src="http://navajochapters.org/uploads/images/nn-color%20seal.gif"></td>
-                    <td><img src="http://navajochapters.org/uploads/images/nn-color%20seal.gif"></td>
+                    <td><img id="img7" src="http://navajochapters.org/uploads/images/nn-color%20seal.gif"></td>
+                    <td><img id="img8" src="http://navajochapters.org/uploads/images/nn-color%20seal.gif"></td>
+                    <td><img id="img9" src="http://navajochapters.org/uploads/images/nn-color%20seal.gif"></td>
                 </tr>
             </tbody>
         </table>
@@ -51,38 +50,38 @@
 <script>
     $(document).ready(function(){
         $('#img1').click(function(){
-            $("#img1").attr('src', "http://images1.fanpop.com/images/photos/2200000/blushing-uchiha-sasuke-2219136-500-375.jpg");
+            $("#img1").attr('src', "https://www.crowcanyon.org/EducationProducts/peoples_mesa_verde/images/code_talkers_navajo_times_sm.jpg");
         });
 
-        $('').click(function(){
-            $("").attr('src', "http://navajochapters.org/uploads/images/nn-color%20seal.gif");
+        $('#img2').click(function(){
+            $("#img2").attr('src', "https://www.crowcanyon.org/EducationProducts/peoples_mesa_verde/images/code_talkers_navajo_times_sm.jpg");
         });
 
-        $('').click(function(){
-            $("").attr('src', "http://navajochapters.org/uploads/images/nn-color%20seal.gif");
+        $('#img3').click(function(){
+            $("#img3").attr('src', "https://www.crowcanyon.org/EducationProducts/peoples_mesa_verde/images/code_talkers_navajo_times_sm.jpg");
         });
-        $('').click(function(){
-            $("").attr('src', "http://navajochapters.org/uploads/images/nn-color%20seal.gif");
-        });
-
-        $('').click(function(){
-            $("").attr('src', "http://navajochapters.org/uploads/images/nn-color%20seal.gif");
+        $('#img4').click(function(){
+            $("#img4").attr('src', "https://www.crowcanyon.org/EducationProducts/peoples_mesa_verde/images/code_talkers_navajo_times_sm.jpg");
         });
 
-        $('').click(function(){
-            $("").attr('src', "http://navajochapters.org/uploads/images/nn-color%20seal.gif");
+        $('#img5').click(function(){
+            $("#img5").attr('src', "https://www.crowcanyon.org/EducationProducts/peoples_mesa_verde/images/code_talkers_navajo_times_sm.jpg");
         });
 
-        $('').click(function(){
-            $("").attr('src', "http://navajochapters.org/uploads/images/nn-color%20seal.gif");
+        $('#img6').click(function(){
+            $("#img6").attr('src', "https://www.crowcanyon.org/EducationProducts/peoples_mesa_verde/images/code_talkers_navajo_times_sm.jpg");
         });
 
-        $('').click(function(){
-            $("").attr('src', "http://navajochapters.org/uploads/images/nn-color%20seal.gif");
+        $('#img7').click(function(){
+            $("#img7").attr('src', "https://www.crowcanyon.org/EducationProducts/peoples_mesa_verde/images/code_talkers_navajo_times_sm.jpg");
         });
 
-        $("").click(function(){
-            $("").attr('src', "http://navajochapters.org/uploads/images/nn-color%20seal.gif");
+        $('#img8').click(function(){
+            $("#img8").attr('src', "https://www.crowcanyon.org/EducationProducts/peoples_mesa_verde/images/code_talkers_navajo_times_sm.jpg");
+        });
+
+        $("#img9").click(function(){
+            $("#img9").attr('src', "https://www.crowcanyon.org/EducationProducts/peoples_mesa_verde/images/code_talkers_navajo_times_sm.jpg");
         });
     });
 
